--- a/views/resultspage.pug
+++ b/views/resultspage.pug
@@ -1,14 +1,6 @@
 extends layout
 
 block content
-  .container
-    h1 Leisure Search
-    form(method="GET" action="/search")
-      .form-group
-        label(for='searchBox') Search Activities
-        input#searchBox.form-control(type='text' placeholder='Search term' name="q")
-      .form-group
-        input.btn.btn-success(type="submit" value="Search now")
   .container.mt-5
     h3 Results of search "!{searchTerm}"
     hr
@@ -19,5 +11,5 @@ block content
     h3.mt-5 Related Content
     each result in results
       if result.score >= 0.2
-        a.btn.btn-light(role="button")= result.saneName
+        a.btn.btn-light(role="button" href=`getinfo?name=${result.item.name}&searchTerm=${searchTerm}`)= result.saneName
         hr
