--- a/views/layout.pug
+++ b/views/layout.pug
@@ -8,12 +8,13 @@ html
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
     .container
-        h1 Leisure Search
+        a(href="/" style="text-decoration: none; color: black")
+          h1 Leisure Search
         form(method="GET" action="/search")
           .form-group
             label(for='searchBox') Search Activities
             input#searchBox.form-control(type='text' placeholder='Search term' name="q")
           .form-group
             input.btn.btn-success(type="submit" value="Search now")
-    hr.m-5
+    hr
     block content
